# cng-crypto-utils

./: CMakeLists.txt  README.md  USAGE.md
cu/: CMakeLists.txt
cu/src/: main.c
cu/src/include/: error.h  work.h
cu/src/lib/: cu.h
cu/src/lib/cu/: hash.c  key.c  sign.c
cu/src/utils/: argparse.c  error.c  work.c
gui/: CMakeLists.txt
gui/src/: applets.c  command.c  gui.c  main.c
gui/src/include/: applets.h  command.h  gui.h
shell/: install.ps1  uninstall.ps1
shell/reg/: shell.reg.template  uninstall.reg
src/: main.c
src/include/: argparse.h  error.h
src/lib/: cu.h
src/lib/cu/: encrypt.c  hash.c  key.c  pubkey.c  sign.c
src/utils/: argparse.c  error.c  work.c
